--- a/client/layout/Navbar/NavbarTemplate.html
+++ b/client/layout/Navbar/NavbarTemplate.html
@@ -5,7 +5,8 @@
        <a class="navbar-brand" href="sevsu.ru"><img src="img/2.png"></a>
      </div>
      <div class="collapse navbar-collapse navbar-right"  id="bs-example-navbar-collapse-1">
-       <p class="text-info"><span class="colortext">Ч</span>етная/<span class="colortext">Н</span>ечетная</p>
+       <!-- <p class="text-info"><span class="colortext">Ч</span>етная/<span class="colortext">Н</span>ечетная</p> -->
+       <p id="infoday"></p>
      </div>
      <div class="collapse navbar-collapse navbar-center"  id="bs-example-navbar-collapse-10">
        <ul class="nav navbar-nav navbar-left">
@@ -14,6 +15,13 @@
   </div>
        <ul class="nav navbar-nav navbar-right">
         <li>{{>status}}</li>
+        <script type="text/javascript">
+          d0 = new Date();
+          d0.setFullYear((new Date()).getMonth() < 9 ? (new Date()).getFullYear() - 1 : (new Date()).getFullYear(), 8, 1);
+          d1 = new Date();
+          dt = Math.floor(((d1.getTime() - d0.getTime() + 1000*60*60*24) / (1000*60*60*24*7)) + 1);
+          if(dt % 2) document.getElementById('infoday').innerHTML += '<p class="text-info"><span class="colortext">Ч</span>етная</p>'; else document.getElementById('infoday').innerHTML += '<p class="text-info"><span class="colortext">Н</span>ечетная</p>';
+        </script>
          <li><button id="logout-button" type="button" class="btn btn-default navbar-btn">Выйти</button></li>
        </ul>
    </div><!-- /.container-fluid -->
