--- a/client/layout/AuthPage/LogIn/LoginPage.html
+++ b/client/layout/AuthPage/LogIn/LoginPage.html
@@ -11,10 +11,10 @@
               <form >
               <input id ="login-email" type="email" required value="Логин" onBlur="if(this.value=='')this.value='Логин'" onFocus="if(this.value=='Логин')this.value='' ">
               <input id="password" type ="password" required value="Пароль" onBlur="if(this.value=='')this.value='Пароль'" onFocus="if(this.value=='Пароль')this.value='' ">
-              <input id="username" required value="Username" onBlur="if(this.value=='')this.value='Username'" onFocus="if(this.value=='Username')this.value='' ">
+              <!-- <input id="username" required value="Username" onBlur="if(this.value=='')this.value='Username'" onFocus="if(this.value=='Username')this.value='' "> -->
               <input id="login-button" type="button" value="ВОЙТИ">
-              <input id="logout-button" type="button" value="ВЫЙТИ">
-              <input id="register-btn" type="button" value="ЗАРЕГИСТРИРОВАТЬСЯ">
+              <!-- <input id="logout-button" type="button" value="ВЫЙТИ"> -->
+              <!-- <input id="register-btn" type="button" value="ЗАРЕГИСТРИРОВАТЬСЯ"> -->
               </form>
           </fieldset>
       </div>
