--- a/client/layout/CardsTemptlate/ListStudent/ListStudentTemplate.html
+++ b/client/layout/CardsTemptlate/ListStudent/ListStudentTemplate.html
@@ -16,7 +16,7 @@
              <td id='fio'>{{username}}</td>
              <td>{{profile.course}}</td>
              <td id='group'>{{profile.group}}</td>
-             <td>{{profile.role}}</td>
+             <!-- <td>{{profile.role}}</td> -->
              <td>{{userEmail}}</td>
              <button id='remove-user-btn'>Удалить</button>
            </tr>
