--- a/client/layout/Navbar/NavbarTemplate.html
+++ b/client/layout/Navbar/NavbarTemplate.html
@@ -14,7 +14,7 @@
      </ul>
   </div>
        <ul class="nav navbar-nav navbar-right">
-        <li>{{>status}}</li>
+        <!-- <li>{{>status}}</li> -->
         <script type="text/javascript">
           d0 = new Date();
           d0.setFullYear((new Date()).getMonth() < 9 ? (new Date()).getFullYear() - 1 : (new Date()).getFullYear(), 8, 1);
