--- a/client/layout/CardsTemptlate/TimeTable/Tue.html
+++ b/client/layout/CardsTemptlate/TimeTable/Tue.html
@@ -1,4 +1,4 @@
-<template name="TimeTable">
+<template name="Tuesday">
   <script src="TimeTablehelpfile.js"></script>
   <div class="clearfix"></div>
   <div class="bubble1 col-sm-3 ">
@@ -18,6 +18,11 @@
         {{/each}}
       {{/each}}
     {{/each}}
+        <div id="less">
+          <p id="f"></p>
+          <p id="s"></p>
+          <p id="t"></p>
+        </div>
          <hr>
   <div id="demo4" class="collapse">
          <hr>
