--- a/client/layout/CardsTemptlate/Notes/NotesTemplate.html
+++ b/client/layout/CardsTemptlate/Notes/NotesTemplate.html
@@ -9,9 +9,16 @@
               <h5>Дата <i class="fa fa-calendar-o" aria-hidden="true"></i></h5>
                <hr>
         <div id="demo3" class="collapse">
+          {{#each notes}}
+          {{text}}
+          <button id="delete">Удалить</button>
+          {{/each}}
+          <input type="text" id="note_Text">
+          <button id="add">Добавить</button>
                <hr>
            </div>
             <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo3">Подробнее</button>
           </div>
+          <button id="removeNote">del</button>
   </div>
 </template>
