--- a/client/layout/CardsTemptlate/TimeTable/Mon.html
+++ b/client/layout/CardsTemptlate/TimeTable/Mon.html
@@ -1,5 +1,4 @@
-<template name="TimeTable">
-  <script src="TimeTablehelpfile.js"></script>
+<template name="Monday">
   <div class="clearfix"></div>
   <div class="bubble1 col-sm-3 ">
   <!-- Блок для заголовка -->
@@ -18,6 +17,11 @@
         {{/each}}
       {{/each}}
     {{/each}}
+        <div id="less">
+          <p id="f"></p>
+          <p id="s"></p>
+          <p id="t"></p>
+        </div>
          <hr>
   <div id="demo4" class="collapse">
          <hr>
