--- a/client/layout/CardsTemptlate/RegStudent/RegStudentTemplate.html
+++ b/client/layout/CardsTemptlate/RegStudent/RegStudentTemplate.html
@@ -6,6 +6,10 @@
              <h6>ФИО<i class="fa fa-user-o" aria-hidden="true"><input id="username" type="text" placeholder="ФИО студента"></i></h6>
              <h6>Mail<i class="fa fa-user-o" aria-hidden="true"><input id="login-email" type="email" placeholder=email></i></h6>
              <h6>Password<i class="fa fa-user-o" aria-hidden="true"><input id="password" type="password" placeholder="*****"></i></h6>
+             <h6>Роль<i class="fa fa-user-o" aria-hidden="true"><select id="role">
+               <option value="student">student</option>
+               <option value="administrator">administrator</option>
+             </select></i></h6>
              <h6>Курс<i class="fa fa-user-o" aria-hidden="true"><select id="course">
                <option value="1">1</option>
                <option value="2">2</option>
