--- a/client/layout/CardsTemptlate/ListStudent/ListStudentTemplate.html
+++ b/client/layout/CardsTemptlate/ListStudent/ListStudentTemplate.html
@@ -44,17 +44,20 @@
                   });
                </script>
                <th><h6>Курс<i><select id="courseSelect">
+                 <option value="все">все</option>
                  <option value="1">1</option>
                  <option value="2">2</option>
                  <option value="3">3</option>
                  <option value="4">4</option>
                  <option value="5">5</option>
+                 <option value="none">none</option>
                </select></i></h6></th>
                <th><h6>Группа<i><select id="groupSelect">
+                 <option>-</option>
                </select></i></h6></th>
                <th>Почта</th>
              </tr>
-           {{#each users}}
+           {{#each results}}
            <tr>
              <td id='fio'>{{username}}</td>
              <td>{{profile.course}}</td>
@@ -66,6 +69,7 @@
 
            {{/each}}
          </table>
+         <button id="submit">Submit</button>
 
 
   </div>
